feat: complete JWT security with USER/ADMIN role-based authorization and user-owned asset access control